banner section added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower shop</title>
     <link rel="stylesheet" href="styles/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <header class="banner-container">
+        <div class="banner-description">
+            <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+            <p class="banner-para">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout. The point of using Lorem Ipsum is <br>
+                that it has a more-or-less normal distribution of letters.</p>
+            <button class="banner-button">Shop Now</button>
+        </div>
+        <div class="banner-image">
+            <img class="banner-flower" src="Asset/pngwing 10.png" alt="flower">
+        </div>
+    </header>
 </body>
 
 </html>
