hot deals section added

--- a/index.html
+++ b/index.html
@@ -16,15 +16,30 @@
     <header class="banner-container">
         <div class="banner-description">
             <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
-            <p class="banner-para">It is a long established fact that a reader will be distracted by the readable <br>
+            <p class="banner-para">It is a long established fact that a reader will be distracted by the
+                readable <br>
                 content of a page when looking at its layout. The point of using Lorem Ipsum is <br>
                 that it has a more-or-less normal distribution of letters.</p>
-            <button class="banner-button">Shop Now</button>
+            <button class="btn-primary">Shop Now</button>
         </div>
         <div class="banner-image">
             <img class="banner-flower" src="Asset/pngwing 10.png" alt="flower">
         </div>
     </header>
+    <main>
+        <section class="hot-deals">
+            <div class="deals-description">
+                <h1 class="deals-title">Hot Deal ! Sale Up To 25% <span class="color-primary">Off</span></h1>
+                <pv= class="deals-para">It is a long established fact that a reader will be distracted by the readable
+                    <br>
+                    content of a page when looking at its layout.</p>
+                    <button class="btn-primary">Sign Up</button>
+            </div>
+            <div class="deals-image">
+                <img class="deals-flower" src="Asset/pngwing 8.png" alt="Some rose in a glass vase">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
