latest deals section added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
                 <img class="deals-flower" src="Asset/pngwing 8.png" alt="Some rose in a glass vase">
             </div>
         </section>
+        <section class="latest-deals">
+            <div class="latest-deals-container">
+                <h1 class="latest-deals-title">Get The Latest Deals</h1>
+                <p class="latest-deals-para">$30 coupon for first shopping</p>
+                <input class="latest-search" type="text" placeholder="Enter your email here....">
+                <button class="btn-primary">Subscribe</button>
+            </div>
+        </section>
     </main>
 </body>
 
