--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <h1 class="footer-title"><span class="color-primary">Flower</span>Shop</h1>
+        <p class="footer-para">It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout.</p>
+        <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+    </footer>
 </body>
 
 </html>
