instagram section added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
                 <img class="deals-flower" src="Asset/pngwing 8.png" alt="Some rose in a glass vase">
             </div>
         </section>
+
+
+        <section class="instagram">
+            <h1 class="insta-title">Instagram</h1>
+            <p class="insta-para">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="insta-container">
+                <div class="insta-image">
+                    <img class="insta-flower" src="Asset/Flower 01.png" alt="flower">
+                </div>
+                <div class="insta-image">
+                    <img class="insta-flower" src="Asset/Rectangle 4.png" alt="flower">
+                </div>
+                <div class="insta-image">
+                    <img class="insta-flower" src="Asset/Rectangle 5.png" alt="flower">
+                </div>
+                <div class="insta-image">
+                    <img class="insta-flower" src="Asset/Rectangle 6.png" alt="flower">
+                </div>
+            </div>
+        </section>
+
+
+
+
         <section class="latest-deals">
             <div class="latest-deals-container">
                 <h1 class="latest-deals-title">Get The Latest Deals</h1>
