featured-flower section added

--- a/index.html
+++ b/index.html
@@ -27,19 +27,47 @@
         </div>
     </header>
     <main>
+        <section class="featured-flowers">
+            <h1 class="featured-title">Our Featured Flowers</h1>
+            <p class="featured-para">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="featured-flower-container">
+                <div class="featured-box box-1">
+                    <img class="featured-image-1" src="Asset/pngwing 6.png" alt="flower">
+                </div>
+                <div class="featured-box box-2">
+                    <img class="featured-image-2" src="Asset/pngwing 5.png" alt="flower">
+                </div>
+                <div class="featured-box box-3">
+                    <img class="featured-image-3" src="Asset/pngwing 7.png" alt="flower">
+                </div>
+            </div>
+            <div class="name-container">
+                <div>
+                    <h3>Pink Flower Tree</h3>
+                </div>
+                <div>
+                    <h3>Pink Flower Tree</h3>
+                </div>
+                <div>
+                    <h3>Pink Flower Tree</h3>
+                </div>
+            </div>
+        </section>
+
         <section class="hot-deals">
             <div class="deals-description">
                 <h1 class="deals-title">Hot Deal ! Sale Up To 25% <span class="color-primary">Off</span></h1>
-                <pv= class="deals-para">It is a long established fact that a reader will be distracted by the readable
+                <p class="deals-para">It is a long established fact that a reader will be distracted by the readable
                     <br>
-                    content of a page when looking at its layout.</p>
-                    <button class="btn-primary">Sign Up</button>
+                    content of a page when looking at its layout.
+                </p>
+                <button class="btn-primary">Sign Up</button>
             </div>
             <div class="deals-image">
                 <img class="deals-flower" src="Asset/pngwing 8.png" alt="Some rose in a glass vase">
             </div>
         </section>
-
 
         <section class="instagram">
             <h1 class="insta-title">Instagram</h1>
@@ -55,14 +83,11 @@
                 <div class="insta-image">
                     <img class="insta-flower" src="Asset/Rectangle 5.png" alt="flower">
                 </div>
-                <div class="insta-image">
+                <div>
                     <img class="insta-flower" src="Asset/Rectangle 6.png" alt="flower">
                 </div>
             </div>
         </section>
-
-
-
 
         <section class="latest-deals">
             <div class="latest-deals-container">
