new plant section added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
             </div>
         </section>
 
+        <section class="indoor-plants">
+            <h1 class="featured-title">Indoor Plants</h1>
+            <p class="featured-para">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="indoor-plants-container">
+                <div class="plant-box">
+                    <img class="plant" src="Asset/plant-1.jpg" alt="">
+                    <h3>Plant Name</h3>
+                </div>
+                <div class="plant-box">
+                    <img class="plant" src="Asset/plant-2.jpg" alt="">
+                    <h3>Plant Name</h3>
+                </div>
+                <div class="plant-box">
+                    <img class="plant" src="Asset/plant-3.jpg" alt="">
+                    <h3>Plant Name</h3>
+                </div>
+                <div class="plant-box">
+                    <img class="plant" src="Asset/plant-4.jpg" alt="">
+                    <h3>Plant Name</h3>
+                </div>
+        </section>
+
         <section class="hot-deals">
             <div class="deals-description">
                 <h1 class="deals-title">Hot Deal ! Sale Up To 25% <span class="color-primary">Off</span></h1>
