delivery section added

--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@
                 </div>
         </section>
 
+        <section class="delivery">
+            <div class="delivery-container">
+                <div>
+                    <img src="Asset/Group 57.png" alt="delivery man">
+                    <h3>Same Day Delivery. Click & Collect.</h3>
+                </div>
+                <div>
+                    <img src="Asset/Group 58.png" alt="">
+                    <h3>Fresh Flowers. Local Growers.</h3>
+                </div>
+                <div>
+                    <img src="Asset/Group 59.png" alt="">
+                    <h3>24/7 Free Support.</h3>
+                </div>
+            </div>
+        </section>
+
         <section class="hot-deals">
             <div class="deals-description">
                 <h1 class="deals-title">Hot Deal ! Sale Up To 25% <span class="color-primary">Off</span></h1>
