image size and css line reduce

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="banner-container">
         <div class="banner-description">
             <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
-            <p class="banner-para">It is a long established fact that a reader will be distracted by the
+            <p class="primary-para">It is a long established fact that a reader will be distracted by the
                 readable <br>
                 content of a page when looking at its layout. The point of using Lorem Ipsum is <br>
                 that it has a more-or-less normal distribution of letters.</p>
@@ -28,8 +28,8 @@
     </header>
     <main>
         <section class="featured-flowers">
-            <h1 class="featured-title">Our Featured Flowers</h1>
-            <p class="featured-para">It is a long established fact that a reader will be distracted by the readable <br>
+            <h1 class="primary-title">Our Featured Flowers</h1>
+            <p class="primary-para">It is a long established fact that a reader will be distracted by the readable <br>
                 content of a page when looking at its layout.</p>
             <div class="featured-flower-container">
                 <div class="featured-box box-1">
@@ -56,8 +56,8 @@
         </section>
 
         <section class="indoor-plants">
-            <h1 class="featured-title">Indoor Plants</h1>
-            <p class="featured-para">It is a long established fact that a reader will be distracted by the readable <br>
+            <h1 class="primary-title">Indoor Plants</h1>
+            <p class="primary-para">It is a long established fact that a reader will be distracted by the readable <br>
                 content of a page when looking at its layout.</p>
             <div class="indoor-plants-container">
                 <div class="plant-box">
@@ -97,8 +97,8 @@
 
         <section class="hot-deals">
             <div class="deals-description">
-                <h1 class="deals-title">Hot Deal ! Sale Up To 25% <span class="color-primary">Off</span></h1>
-                <p class="deals-para">It is a long established fact that a reader will be distracted by the readable
+                <h1 class="primary-title">Hot Deal ! Sale Up To 25% <span class="color-primary">Off</span></h1>
+                <p class="primary-para">It is a long established fact that a reader will be distracted by the readable
                     <br>
                     content of a page when looking at its layout.
                 </p>
@@ -110,8 +110,8 @@
         </section>
 
         <section class="instagram">
-            <h1 class="insta-title">Instagram</h1>
-            <p class="insta-para">It is a long established fact that a reader will be distracted by the readable <br>
+            <h1 class="primary-title">Instagram</h1>
+            <p class="primary-para">It is a long established fact that a reader will be distracted by the readable <br>
                 content of a page when looking at its layout.</p>
             <div class="insta-container">
                 <div class="insta-image">
@@ -131,8 +131,8 @@
 
         <section class="latest-deals">
             <div class="latest-deals-container">
-                <h1 class="latest-deals-title">Get The Latest Deals</h1>
-                <p class="latest-deals-para">$30 coupon for first shopping</p>
+                <h1 class="primary-title">Get The Latest Deals</h1>
+                <p class="primary-para">$30 coupon for first shopping</p>
                 <input class="latest-search" type="text" placeholder="Enter your email here....">
                 <button class="btn-primary">Subscribe</button>
             </div>
